name:                lens-family-th
version:             0.1.0.0
synopsis:            Template Haskell to generate lenses for
                     lens-family and lens-family-core

-- description:         

homepage:            http://github.com/DanBurton/lens-family
license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
copyright:           Copyright (C) 2012 Dan Burton

category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Lens.Family.TH, Lens.Family2.TH, Lens.Family.THCore
  build-depends:       base ==4.*, template-haskell ==2.7.*
  source-repository head
    type:      git
    location:  git://github.com/DanBurton/lens-family-th.git
